working personal site info section

--- a/app/personalSite.jade
+++ b/app/personalSite.jade
@@ -15,7 +15,6 @@ html(lang="en-US")
         //- nav section icons
         <i class="nav-icon-home fa fa-home"></i>
         <i class="nav-icon-projects fa fa-briefcase"></i>
-        <i class="nav-icon-info fa fa-cubes"></i>
         <i class="nav-icon-links fa fa-comment-o"></i>
         //- project descriptions
         .projectDescriptionsContainer.hidden
@@ -31,6 +30,50 @@ html(lang="en-US")
                 | Tyler Black, Kyle McCormick, and Ben Taylor, this phaser/nodejs four player
                 | game allows the users to once again compete in the cold war race to space
                 | domination.
+        .infoDescriptionsContainer.hidden
+            .backgroundDescription.hidden
+                ul.background-list
+                  li Born in Mobile, AL
+                  li Undergraduate degree in Economics from Vanderbilt University
+                  li Masters in Accounting from University of Georgia
+                  li 3 years experience in implementing and training on ERP systems
+                  li Attended intensive 6 month program for full stack web development
+                  li Currently located in Nashville, TN
+            .skillsDescription.hidden
+                ul.skills-list
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/HTML5_Logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/css3-logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/JavaScript-logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/jquery-logo.jpg")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/three_logo.jpg")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/nodejs-green.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/Ruby_logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/Ruby_on_Rails.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/bower_logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/grunt_logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/gulp-logo.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/SQLite.png")
+                  li
+                    img(src="https://s3.amazonaws.com/edean11.github.io/logos/Microsoft-SQL-Server.jpg")
+            .interestsDescription.hidden
+                ul.interests-list
+                  li Multi-instrumentalist (e.g. guitar, piano, drums etc.)
+                  li 3D Printing and Woodworking
+                  li Electronics projects
+                  li Philosophy and Economics
+        <i class="closeInfoDescription fa fa-times-circle-o hidden"></i>
         // [if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]
         script(src="vendor/jquery/dist/jquery.min.js")
         script(src="vendor/lodash/lodash.min.js")
