--- a/app/styles/_personalSiteAnimations.scss
+++ b/app/styles/_personalSiteAnimations.scss
@@ -13,12 +13,12 @@
     transform: translateX(0px) translateY(900px);
   }
   50% {
-    -webkit-transform: translateX(0px) translateY(900px);
-    transform: translateX(0px) translateY(900px);
+    -webkit-transform: translateX(0px) translateY(900px) scale(1.3);
+    transform: translateX(0px) translateY(900px) scale(1.3);
   }
   75% {
-    -webkit-transform: translateX(-1050px) translateY(900px) rotate(180deg);
-    transform: translateX(-1050px) translateY(900px) rotate(180deg);
+    -webkit-transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
+    transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
   }
   100% {
     -webkit-transform: translateX(0px) translateY(0px);
@@ -36,12 +36,12 @@
     transform: translateX(0px) translateY(900px);
   }
   50% {
-    -moz-transform: translateX(0px) translateY(900px);
-    transform: translateX(0px) translateY(900px);
+    -moz-transform: translateX(0px) translateY(900px) translateZ(200px) scale(1.3);
+    transform: translateX(0px) translateY(900px) translateZ(200px) scale(1.3);
   }
   75% {
-    -moz-transform: translateX(-1050px) translateY(900px) rotate(180deg);
-    transform: translateX(-1050px) translateY(900px) rotate(180deg);
+    -moz-transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
+    transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
   }
   100% {
     -moz-transform: translateX(0px) translateY(0px);
@@ -63,16 +63,16 @@
     transform: translateX(0px) translateY(900px);
   }
   50% {
-    -moz-transform: translateX(0px) translateY(900px);
-    -webkit-transform: translateX(0px) translateY(900px);
-    -o-transform: translateX(0px) translateY(900px);
-    transform: translateX(0px) translateY(900px);
+    -moz-transform: translateX(0px) translateY(900px) translateZ(200px) scale(1.3);
+    -webkit-transform: translateX(0px) translateY(900px) translateZ(200px) scale(1.3);
+    -o-transform: translateX(0px) translateY(900px) translateZ(200px) scale(1.3);
+    transform: translateX(0px) translateY(900px) translateZ(200px) scale(1.3);
   }
   75% {
-    -moz-transform: translateX(-1050px) translateY(900px) rotate(180deg);
-    -webkit-transform: translateX(-1050px) translateY(900px) rotate(180deg);
-    -o-transform: translateX(-1050px) translateY(900px) rotate(180deg);
-    transform: translateX(-1050px) translateY(900px) rotate(180deg);
+    -moz-transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
+    -webkit-transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
+    -o-transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
+    transform: translateX(-1050px) translateY(900px) rotate(180deg) scale(0.8);
   }
   100% {
     -moz-transform: translateX(0px) translateY(0px);
@@ -98,12 +98,12 @@
     transform: translateX(0px) translateY(900px);
   }
   50% {
-    -webkit-transform: translateX(0px) translateY(0px);
-    transform: translateX(0px) translateY(0px);
+    -webkit-transform: translateX(0px) translateY(0px) scale(0.8);
+    transform: translateX(0px) translateY(0px) scale(0.8);
   }
   75% {
-    -webkit-transform: translateX(1050px) translateY(0px) rotate(180deg);
-    transform: translateX(1051050px0px) translateY(0px) rotate(180deg);
+    -webkit-transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
+    transform: translateX(1051050px0px) translateY(0px) rotate(180deg) scale(1.3);
   }
   100% {
     -webkit-transform: translateX(0px) translateY(0px);
@@ -121,12 +121,12 @@
     transform: translateX(0px) translateY(900px);
   }
   50% {
-    -moz-transform: translateX(0px) translateY(0px);
-    transform: translateX(0px) translateY(0px);
+    -moz-transform: translateX(0px) translateY(0px) scale(0.8);
+    transform: translateX(0px) translateY(0px) scale(0.8);
   }
   75% {
-    -moz-transform: translateX(1050px) translateY(0px) rotate(180deg);
-    transform: translateX(1050px) translateY(0px) rotate(180deg);
+    -moz-transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
+    transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
   }
   100% {
     -moz-transform: translateX(0px) translateY(0px);
@@ -148,16 +148,16 @@
     transform: translateX(0px) translateY(900px);
   }
   50% {
-    -moz-transform: translateX(0px) translateY(0px);
-    -webkit-transform: translateX(0px) translateY(0px);
-    -o-transform: translateX(0px) translateY(0px);
-    transform: translateX(0px) translateY(0px);
+    -moz-transform: translateX(0px) translateY(0px) scale(0.8);
+    -webkit-transform: translateX(0px) translateY(0px) scale(0.8);
+    -o-transform: translateX(0px) translateY(0px) scale(0.8);
+    transform: translateX(0px) translateY(0px) scale(0.8);
   }
   75% {
-    -moz-transform: translateX(1050px) translateY(0px) rotate(180deg);
-    -webkit-transform: translateX(1050px) translateY(0px) rotate(180deg);
-    -o-transform: translateX(1050px) translateY(0px) rotate(180deg);
-    transform: translateX(1050px) translateY(0px) rotate(180deg);
+    -moz-transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
+    -webkit-transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
+    -o-transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
+    transform: translateX(1050px) translateY(0px) rotate(180deg) scale(1.3);
   }
   100% {
     -moz-transform: translateX(0px) translateY(0px);
