fixed typos on index page

--- a/app/index.jade
+++ b/app/index.jade
@@ -58,14 +58,14 @@ html(lang="en-US")
                     li JS Data Object
                     li JS Options Object
                 p.docs-info-content-header-small JS Data Object
-                p This object holds all the relvant data that you would like to map.  
-                    | The data object should contain unique id's for each data point (entered as keys of the data object), 
-                    | and within each of those keys should be the data that corresponds to that data point.  
+                p This object holds all the relevant data that you would like to map.
+                    | The data object should contain unique id's for each data point (entered as keys of the data object),
+                    | and within each of those keys should be the data that corresponds to that data point.
                     | See examples below for more details.
                 p.docs-info-content-header-small JS Options Object
-                p This object can contain a wide variety of available output options as defined by 3datajs.  
+                p This object can contain a wide variety of available output options as defined by 3datajs.
                     | Simply include the options property and the desired value
-                    | in the options object and pass it into the main 3datajs function with the data object.  
+                    | in the options object and pass it into the main 3datajs function with the data object.
                     | See below for details.
                 p.docs-info-content-header Example
                 p.docs-info-content-header-small Sample Data Object With Name
@@ -101,12 +101,12 @@ html(lang="en-US")
 
                 p.docs-info-content-header User Facing Functions
                 code _3DATA.create(data, options)
-                p.userfunction-desc Creates the scene with the data and options specified.  
+                p.userfunction-desc Creates the scene with the data and options specified.
                     | The return value is an object that contains: the data point scene and
                     | renderer as well as the popup scene and renderer.
                     | These can be manipulated after the create function has been run to modify
                     | the scene as needed.  If modified, run the _3DATA.render() function specified
-                    | below to show the changes
+                    | below to show the changes.
                     | Once the 3DATA.create() function has been called as seen
                     | above, the user will have access to a number of other
                     | functions that will help the user get the most out of
